# serial_notifier

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  macro.cmake  readme.md  s_tray.sln
.github/workflows/: build_and_test.yml  ci.yml  cmake-single-platform.yml  serial_notifier_build.yml
cmake/: catch2.cmake
misc/: misc.txt
s_tray/: ReadMe.txt  Resource.h  SerialInfo.cpp  SerialInfo.h  UTray.cpp  UTray.h  s_tray.aps  s_tray.cpp  s_tray.h  s_tray.rc  s_tray.vcproj  s_trayDlg.cpp  s_trayDlg.h  stdafx.cpp
s_tray/res/: s_tray.rc2
src/: exception.h  main_app.cpp  main_app.h  main_dlg.cpp  main_dlg.cpp.bak  main_dlg.h  resource.h  serial.h  serial_notifier.aps  serial_notifier.rc  settings.h  stdafx.cpp  stdafx.h
src/lang/: Readme.md  lang.cpp  lang.h  supported_langs.h
src/lang/de/: de.cpp
src/lang/en/: en.cpp
src/lang/es/: es.cpp
src/lang/fr/: fr.cpp
src/lang/it/: it.cpp
src/lang/ru/: ru.cpp
src/lang/translations/: de.inl  en.inl  es.inl  fr.inl  it.inl  ru.inl
src/registry/: registry.h  registry_helpers.h
src/res/: serial_notifier.rc2
tests/: catch.hpp  lang_test.cpp  main.cpp  registry_tests.cpp  serial_tests.cpp  settings_tests.cpp
